kubernetes/ingress/prod-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: medicine-warriors
    app.kubernetes.io/instance: medicine-warriors
    env: prod
  name: medicine-warriors
  namespace: default
spec:
  rules:
  - host: medicinewarriors.org
    http:
      paths:
      - backend:
          service:
            name: service-medicine-warriors-frontend
            port:
              number: 80
        path: /()(.*)
        pathType: Prefix
  tls:
  - hosts:
    - medicinewarriors.org
    secretName: external-domain-tls
